# MLProj-Cpp-Py

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cpp/: CMakeLists.txt
cpp/include/: normalizer.h
cpp/src/: main.cpp  normalizer.cpp
data/sample/: churn_sample.csv
mlproj_cpp_py/: __init__.py
mlproj_cpp_py/data/: __init__.py  loader.py  schema.py
mlproj_cpp_py/evaluation/: __init__.py  metrics.py
mlproj_cpp_py/preprocessing/: __init__.py  pipeline.py
mlproj_cpp_py/reporting/: __init__.py  predictions.py
mlproj_cpp_py/training/: __init__.py  trainer.py
python/: main.py
scripts/: train.py
tests/python/: test_loader.py  test_metrics.py  test_preprocessing.py  test_smoke.py
