[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlproj-cpp-py"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlproj_cpp_py*"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
